# lobsterOS-legacy

./: Cargo.toml  README.md  x86_64-lobster.json
.cargo/: config.toml
src/: acpi.rs  allocator.rs  disk.rs  display.rs  elf.rs  fs.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  process.rs  syscall.rs  task.rs  threading.rs  userspace.rs
src/allocator/: fixed_block.rs
src/display/: serial.rs  vga_text.rs
src/syscall/: display.rs  process.rs
src/task/: executor.rs  keyboard.rs
src/threading/: scheduler.rs  thread.rs
tests/: basic_boot.rs  kernel_heap.rs  stack_overflow.rs
