[package]
name = "lobster"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.9.8"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"
bitfield-struct = "0.4.1"
trees = { version = "0.4.1", features = ["no_std"] }

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.28"
default-features = false
